# snippets

./: README.md
angular/dialog-directive/: README.md  app.js  dialog.html  index.html
angular/future-states/: README.md
angular/i18n/: README.md  app.js  index.html  locale-en.json  locale-fr.json
angular/log-service/: README.md  app.js  index.html
angular/nginclude-n-js/: README.md  acquisition.html  app.js  ecg.html  index.html  review-ctrl.js  review.html
angular/scope-in-services/: README.md  test.html  test.js
angular/tabs-n-includes/: app.js  index.html  review.html
angular/tabs-n-includes-with-directives/: README.md  SimpleHTTPServerCORS.py  animation.css  app.js  aw.html  error.html
arduino/blinking_led/: Makefile  blinking_led.ino  platformio.ini
arduino/simple_RF_emitter/: simple_RF_emitter.fzz  simple_RF_emitter.ino
arduino/switch_n_RF/: switch_n_RF.ino
arduino/switch_n_led/: platformio.ini  switch_n_led.fzz  switch_n_led.ino
c++/gtest_tryout/: .gitignore  Makefile  README.md  business_class.hh  corba_proxy.hh  main.cc
c++/gtest_tryout/tests/: Makefile  (+3 more)
c/libcurl/: CMakeLists.txt  README.md  libcurltest.c
js/: .gitignore
js/protractor-frame-buffer/: README.md  xvfb.js
js/requirejs-almond/: .gitignore  README.md  gruntfile.js  package.json
js/simple-typescript/: README.md  gruntfile.js  package.json
js/this_binding_n_promises/: README.md  ko.js  ok.js
js/webgl-cube/: app.js  hammer.js  index.html
js/websocket-mock/: bower.json  gruntfile.js  package.json
linux/sysvinit_template/: README.md
python/lbc/: README.md  lbc.py
(+23 files in other folders)
